FINALLY fixed api and swagger functionality
