# backend/routes/index.js
@@ -1,23 +1,21 @@
 const routes = require('express').Router();
 
-const baseController = require('../controllers');
+const professionalController = require('../controllers/professional');
+const contacts = require('./contacts');
+const temple = require('./temple');
 
-const userController = require('../controllers/user');
-const contactsRoutes = require('./contacts');
-const practiceRoutes = require('./practice');
-const templeRoutes = require('./temple');
+routes.get('/', professionalController.getData);
+routes.use('/contacts', contacts);
 
-routes.get('/', baseController.getName);
-routes.get('/professional', userController.getProfessional);
+routes.use('/', require('./swagger'));
+routes.use('/temple', temple);
 
-routes.use('/contacts', contactsRoutes);
-routes.use('/practice', practiceRoutes);
-routes.use('/temples', templeRoutes);
-
-routes.get('/', (req, res) => {
-  res.send({
+routes.use('/', (docData = (req, res) => {
+  let docData = {
     documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs'
-  });
-});
+  };
+  res.send(docData);
+  })
+);
 
 module.exports = routes;
